Revision history for Mason

** marks an incompatible change

2.13  Jul 3, 2011

2.12  Jul 3, 2011

* Fixes
  - Fix $m->visit under PSGIHandler (Jozef Mojzis)
  - Fix $m->visit when initial out_method passed

2.11  Jun 29, 2011

* Fixes
  - Fix memory leaks between Interp, Request and Component; add test for leaks (StephenClouse)

2.10  Jun 23, 2011

* Fixes
  - Fix filter pipe syntax, broken in 2.09 - RT #69038 (MDIETRICH)
  - Specify and test execution order of multiple filters in pipe syntax
  - Go back to generating version numbers for all sub-modules again

2.09  Jun 20, 2011

* Fixes
  - Properly rename Mason::t::Defer test

2.08  Jun 18, 2011

** Incompatible changes
  - Change apply filter syntax to
     % $.Filter {{
     ...
     % }}
    as it reduces tag soup and better matches the typical use of filtering a block of content

* Improvements
  - Add $m->filter to manually apply filters
  - Add CLASS->no_wrap() as a convenient way to skip parent wrapping
  - Set $_ as well as $_[0] to content for filtering, to make s// based filters easier

* Fixes
  - Define $CLASS as well as CLASS in components, ala CLASS module
  - Fix $. notation inside <& &>
  - Re-fix compatibility with JSON version 1.x
  - Untaint component source when in taint mode (e.g. mod_perl) as in Mason 1, otherwise
    compiler regexes may fail

2.07  Apr 21, 2011

* Improvements
  - Allow arguments to be passed to the content sub from a dynamic filter (e.g. CompCall)
  - Throw error on unmatched %> or &>
  - Fix error line numbers after method sections and multiple text sections

* Fixes
  - Prevent false inheritance loops when component overrides its default parent (Jozef Mojzis)
  - Fix compatibility with JSON version 1.x

* Other
  - Only generate version numbers for .pm files with documentation, to reduce inter-version churn

2.06  Mar 14, 2011

* Fixes
  - Use new file extensions in eg/blog (Jozef Mojzis)

2.05  Mar 6, 2011

** Incompatible changes